--- a/templates/bookDetail.html
+++ b/templates/bookDetail.html
@@ -6,8 +6,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <h1>This is Main Page</h1>
-    <h2><a href="{% url 'library' %}">Library</a> || <a href="{% url 'student' %}">Students</a></h2>
+    <h1>Book Details:</h1>
+    <h2>Title: {{book.title}}</h2>
+    <h3>Description:</h3>
+    <p>
+        {{book.description}}
+    </p>
+    <h3>Price: {{book.price}}</h3>
+    <h3>Count: {{book.count}}</h3>
+    <h3>Author: {{book.author}}</h3>
+    <h3>Create Date: {{book.create_date}}</h3>
+
+    <a href="{% url 'library' %}">Back</a>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
