--- a/templates/student.html
+++ b/templates/student.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <h1>This is Student Page</h1>
-    <p>Welcome</p>
+
+    <form>
+        {% csrf_token %}
+        <input type="text" value="{{search}}" name="search" placeholder="Search">
+        <button type="submit">Search</button>
+    </form>
+
+    <h2>Students:</h2>
+    <ul>
+        {% for student in students %}
+        <li>
+            <h3>
+                <a href="{% url 'student-details' student.id %}">Name: {{student.first_name}} {{student.last_name}}</a>
+            </h3>
+        </li>
+        {% endfor %}
+    </ul>
+    <br> <h3><a href="{% url 'main' %}">Back</a></h3>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
