--- a/templates/studentDetail.html
+++ b/templates/studentDetail.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
 </head>
 <body>
-    <h1>This is Main Page</h1>
-    <h2><a href="{% url 'library' %}">Library</a> || <a href="{% url 'student' %}">Students</a></h2>
+    <h1>Student Details:</h1>
+    <h2>First name: {{student.first_name}}</h2>
+    <h2>Last name: {{student.last_name}}</h2>
+    <h2>Age: {{student.age}}</h2>
+    <h2>Status: {{student.status}}</h2>
+    <h2>Address: {{student.address}}</h2>
+
+    <a href="{% url 'student' %}">Back</a>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </html>
