Added login and register page

--- a/templates/mainPage.html
+++ b/templates/mainPage.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>This is Main Page</h1>
-    <h2><a href="{% url 'library' %}">Library</a> || <a href="{% url 'student' %}">Students</a></h2>
+    <h2><a href="{% url 'library' %}">Library</a> || <a href="{% url 'student' %}">Students</a> || <a href="{% url 'register' %}">Sign up</a> || <a href="{% url 'login' %}">Sign in</a></h2>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
